# monitoring-daemon

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg.json
